--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+saved_models/
+figs/
+MIDIs/
+MIDIs_back/
+MIDIs_back_1/
+MIDIs_tmp/
+MIDIs_hr/
+musicXMLs/
+musicXMLs_hr/
+musicXMLs_back/
+musicXMLs_back_1/
+baseline_models/
+saved_tokenizers/
+data/
+uploads/
+downloads/
+
+*.zip
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
